# libma

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: libma.h  libma_float.h
src/: abs.c  copysign.c  min_max.c  nan.c  scalbn.c  scaling_manip.c  totalorder.c
src/internal/: bits.h  fp_classify.h  from_mantissa.h  libma_def.h  mantissa.h  math_config.h  normalize.h  poly.h  scalbn.h  special.h
src/internal/bits/: bitcasts.h  classify.h  construct.h  consts.h  extract.h
src/internal/funcs/: copysign.h  fabs.h  normalize.h  scalbn.h
